--- a/SFEmployeeKB.html
+++ b/SFEmployeeKB.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
-    <script>
+<script>
     (function(n,u){
-    window.BrandEmbassy=n,
+    window.CXoneDfo=n,
     window[n]=window[n]||function(){(window[n].q=window[n].q||[]).push(arguments)},window[n].u=u,
-    e=document.createElement("script"),e.async=1,e.src=u+"?"+Math.round(Date.now()/1e3/3600),
+    e=document.createElement("script"),e.type="module",e.src=u+"?"+Math.round(Date.now()/1e3/3600),
     document.head.appendChild(e)
-    })('brandembassy','https://livechat-static-de-na1.niceincontact.com/4/chat.js');
-    brandembassy('init', 1092, 'chat_c7967784-fdb0-458b-bd27-d4a863ac63f5');
+    })('cxone','https://web-modules-de-na1.niceincontact.com/loader/1/loader.js');
+
+    cxone('init', '1092');
+    cxone('guide', 'init', 'ff08fe48-439c-4c0a-bada-5d3a3a2242b9');
 </script>
 <head>
   <meta charset="utf-8">
@@ -304,4 +306,5 @@
     });
   </script>
 </body>
+
 </html>
