--- a/SteadfasTContactUs.html
+++ b/SteadfasTContactUs.html
@@ -18,7 +18,7 @@
     cxone('guide', 'init', 'ff08fe48-439c-4c0a-bada-5d3a3a2242b9');
 </script>
 
-<title>Contact Us - Steadfast U.S. Healthcare Insurance</title>
+<title>Contact Us - Steadfast U.S. Auto Insurance</title>
 <style>
     body {
         margin: 0;
@@ -136,7 +136,7 @@
 
 <section class="contact-section">
     <h2>Contact Us</h2>
-    <p>If you have questions about our healthcare plans, coverage options, or need assistance with your policy, please fill out the form below or reach out using the contact details provided.</p>
+    <p>If you have questions about our Auto plans, coverage options, or need assistance with your policy, please fill out the form below or reach out using the contact details provided.</p>
     
     <form action="#" method="post">
         <label for="name">Full Name</label>
@@ -184,8 +184,9 @@
 </section>
 
 <footer>
-    &copy; 2025 Steadfast U.S. Healthcare Insurance. All rights reserved.
+    &copy; 2025 Steadfast U.S. Auto Insurance. All rights reserved.
 </footer>
 
 </body>
+
 </html>
