--- a/SteadfasTContactUs.html
+++ b/SteadfasTContactUs.html
@@ -172,14 +172,14 @@
 
     <div class="faq">
         <h3>Frequently Asked Questions</h3>
-        <p><strong>Q:</strong> How do I update my plan?</p>
-        <p><strong>A:</strong> Log into your online account and navigate to “Plan Management” to make changes.</p>
+        <p><strong>Q:</strong> How do I update my policy?</p>
+        <p><strong>A:</strong> Log into your online account and navigate to “Policy Management” to make changes.</p>
 
         <p><strong>Q:</strong> How long does it take to process a cancellation?</p>
         <p><strong>A:</strong> Cancellations are usually processed within 3–5 business days.</p>
 
-        <p><strong>Q:</strong> Do you offer emergency telehealth services?</p>
-        <p><strong>A:</strong> Yes, all plans include 24/7 telehealth support at no extra cost.</p>
+        <p><strong>Q:</strong> Do you offer emergency policyservices?</p>
+        <p><strong>A:</strong> Yes, all plans include 24/7 policy support at no extra cost.</p>
     </div>
 </section>
 
@@ -190,3 +190,4 @@
 </body>
 
 </html>
+
