--- a/NiCE_Int_PE_Plan.html
+++ b/NiCE_Int_PE_Plan.html
@@ -525,12 +525,12 @@
                     </ul>
                 </div>
                 <div class="program-card">
-                    <h3>📊 Tools & Data</h3>
+                    <h3>📊 Tools & Best Practices</h3>
                     <ul>
                         <li>Business case building</li>
-                        <li>Champion development</li>
+                        <li>Demo Enviornment Management</li>
                         <li>Virtual selling excellence</li>
-                        <li>External tools best practicess</li>
+                        <li>External tools</li>
                     </ul>
                 </div>
                 <div class="program-card">
@@ -566,3 +566,4 @@
     </div>
 </body>
 </html>
+
