--- a/NiCE_Int_PE_Plan.html
+++ b/NiCE_Int_PE_Plan.html
@@ -528,7 +528,7 @@
                     <h3>📊 Tools & Best Practices</h3>
                     <ul>
                         <li>Business case building</li>
-                        <li>Demo Enviornment Management</li>
+                        <li>Demo environment management</li>
                         <li>Virtual selling excellence</li>
                         <li>External tools</li>
                     </ul>
@@ -566,4 +566,5 @@
     </div>
 </body>
 </html>
+
 
