--- a/JohnLewisHelp.html
+++ b/JohnLewisHelp.html
@@ -1,4 +1,4 @@
-﻿<script>
+<script>
     (function(n,u){
     window.CXoneDfo=n,
     window[n]=window[n]||function(){(window[n].q=window[n].q||[]).push(arguments)},window[n].u=u,
@@ -7,7 +7,7 @@
     })('cxone','https://web-modules-de-na1.niceincontact.com/loader/1/loader.js');
 
     cxone('init', '3756');
-    cxone('chat', 'init', 3756, 'chat_533d64c0-4429-4dea-a32c-aa142e488ab3');
+    cxone('guide', 'init', '08cdca54-2322-4389-885d-06d0dd670ec1');
 </script>
 
 
