--- a/NiCE_Int_PE_Plan_V1.html
+++ b/NiCE_Int_PE_Plan_V1.html
@@ -338,7 +338,7 @@
                     <ul class="modules">
                         <li>Expert & Knowledge Hub</li>
                         <li>Autosummary</li>
-                        <li>Autopilot</li>
+                        <li>AI Agent</li>
                     </ul>
                     <div class="demo-focus">
                         <strong>Demo Focus:</strong>
@@ -395,7 +395,7 @@
                     </div>
                     <ul class="modules">
                         <li>Studio Advanced Flows</li>
-                        <li>Orchestrator</li>
+                        <li>Real-Time Routing</li>
                         <li>Agent Integrations Advanced</li>
                         <li>API-driven & Event Driven Workflows</li>
                     </ul>
@@ -412,7 +412,7 @@
                     </div>
                     <ul class="modules">
                         <li>Generative AI Use Cases</li>
-                        <li>Autopilot Configuration</li>
+                        <li>AI Agent Configuration</li>
                         <li>Task Assist</li>
                         <li>Autosummary Benefits</li>
                     </ul>
@@ -489,7 +489,7 @@
                     <ul class="modules">
                         <li>Agentic AI Strategy</li>
                         <li>Proactive AI</li>
-                        <li>Autopilot Advanced</li>
+                        <li>AI Agent Advanced</li>
                     </ul>
                     <div class="demo-focus">
                         <strong>Demo Focus:</strong>
@@ -566,6 +566,7 @@
     </div>
 </body>
 </html>
+
 
 
 
