--- a/NiCE_Int_PE_Assesment_V1.html
+++ b/NiCE_Int_PE_Assesment_V1.html
@@ -592,10 +592,10 @@
                     <div class="licensing-info">
                         <h4>💳 Licensing Components</h4>
                         <ul style="list-style: none; padding-left: 0;">
-                            <li>✓ QM Base License (per evaluator)</li>
-                            <li>✓ Recording Storage (per GB)</li>
-                            <li>✓ Analytics Add-on (optional)</li>
-                            <li>✓ AI Scoring Module (optional but recommended)</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
                         </ul>
                     </div>
                     
@@ -690,10 +690,10 @@
                     <div class="licensing-info">
                         <h4>💳 Licensing Components</h4>
                         <ul style="list-style: none; padding-left: 0;">
-                            <li>✓ WFM Core (per agent scheduled)</li>
-                            <li>✓ Advanced Forecasting Module</li>
-                            <li>✓ Real-time Adherence Tracking</li>
-                            <li>✓ Mobile App Access (optional)</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
                         </ul>
                     </div>
                     
@@ -797,10 +797,10 @@
                     <div class="licensing-info">
                         <h4>💳 Licensing Components</h4>
                         <ul style="list-style: none; padding-left: 0;">
-                            <li>✓ Studio Designer License</li>
-                            <li>✓ API Connector Pack</li>
-                            <li>✓ Advanced Routing Engine</li>
-                            <li>✓ Testing & Debugging Tools</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
                         </ul>
                     </div>
                 </div>
@@ -891,10 +891,10 @@
                     <div class="licensing-info">
                         <h4>💳 Licensing Components</h4>
                         <ul style="list-style: none; padding-left: 0;">
-                            <li>✓ Autopilot Base (per conversation tier)</li>
-                            <li>✓ NLU Training Platform</li>
-                            <li>✓ Integration Connectors</li>
-                            <li>✓ Analytics & Optimization Suite</li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC/li>
+                            <li>✓ TBC</li>
+                            <li>✓ TBC</li>
                         </ul>
                     </div>
                 </div>
