--- a/NiCE_Int_PE_Assesment_V1.html
+++ b/NiCE_Int_PE_Assesment_V1.html
@@ -1070,7 +1070,7 @@
                 <div class="cert-levels">
                     <div class="cert-level fundamental">
                         <div class="cert-icon">🎓</div>
-                        <div class="cert-title">Fundamental</div>
+                        <div class="cert-title">Associate</div>
                         <div class="cert-content">Platform & AI Basics</div>
                         <div class="cert-modules">
                             <ul>
@@ -1088,7 +1088,7 @@
                     
                     <div class="cert-level advanced">
                         <div class="cert-icon">🚀</div>
-                        <div class="cert-title">Advanced</div>
+                        <div class="cert-title">Professional</div>
                         <div class="cert-content">Solution Selling</div>
                         <div class="cert-modules">
                             <ul>
@@ -1106,7 +1106,7 @@
                     
                     <div class="cert-level expert">
                         <div class="cert-icon">🏆</div>
-                        <div class="cert-title">Expert</div>
+                        <div class="cert-title">Master</div>
                         <div class="cert-content">Strategic Partnership</div>
                         <div class="cert-modules">
                             <ul>
