--- a/NiCE_Int_PE_Plan_V1.html
+++ b/NiCE_Int_PE_Plan_V1.html
@@ -534,10 +534,10 @@
                     </ul>
                 </div>
                 <div class="program-card">
-                    <h3>🏆 POC Excellence</h3>
+                    <h3>🏆 Licensing & POC Excellence</h3>
                     <ul>
+                        <li>Licensing overview</li>
                         <li>POC scoping for success</li>
-                        <li>Success criteria setting</li>
                         <li>Competitive proofing</li>
                         <li>POC to production</li>
                     </ul>
@@ -566,6 +566,7 @@
     </div>
 </body>
 </html>
+
 
 
 
