--- a/NiCE_Int_PE_Assesment_V1.html
+++ b/NiCE_Int_PE_Assesment_V1.html
@@ -615,7 +615,7 @@
                 <div class="module-card">
                     <div class="module-header" style="background: linear-gradient(135deg, #43A047, #66BB6A);">
                         <div class="module-title">Workforce Management (WFM)</div>
-                        <div class="module-subtitle">Optimize Every Moment, Every Agent, Every Channel</div>
+                        <div class="module-subtitle">Optimise Every Moment, Every Agent, Every Channel</div>
                     </div>
                     
                     <div class="scenario-box">
@@ -626,7 +626,7 @@
                     <div class="value-prop">
                         <h4>Value Proposition</h4>
                         <ul>
-                            <li>Reduce staffing costs by 15-20% through optimized scheduling</li>
+                            <li>Reduce staffing costs by 15-20% through Optimised scheduling</li>
                             <li>Improve forecast accuracy to 95%+</li>
                             <li>Increase schedule adherence to 90%+</li>
                             <li>Eliminate overtime costs by 60%</li>
